@@ -81,16 +81,16 @@ public class IrRowPatternToProgramRewriter
         @Override
         protected Void visitIrAnchor(IrAnchor node, Void context)
         {
-            switch (node.getType()) {
-                case PARTITION_START:
+            return switch (node.getType()) {
+                case PARTITION_START -> {
                     instructions.add(new MatchStart());
-                    return null;
-                case PARTITION_END:
+                    yield null;
+                }
+                case PARTITION_END -> {
                     instructions.add(new MatchEnd());
-                    return null;
-                default:
-                    throw new IllegalStateException("unexpected anchor type: " + node.getType());
-            }
+                    yield null;
+                }
+            };
         }
 
         @Override
@@ -118,7 +118,7 @@ public class IrRowPatternToProgramRewriter
                 instructions.set(splitPosition, new Split(splitTarget, instructions.size()));
             }
 
-            process(parts.get(parts.size() - 1));
+            process(parts.getLast());
 
             for (int position : jumpPositions) {
                 instructions.set(position, new Jump(instructions.size()));
@@ -173,7 +173,7 @@ public class IrRowPatternToProgramRewriter
                 instructions.set(splitPosition, new Split(splitTarget, instructions.size()));
             }
 
-            concatenation(parts.get(parts.size() - 1));
+            concatenation(parts.getLast());
 
             for (int position : jumpPositions) {
                 instructions.set(position, new Jump(instructions.size()));
