@@ -105,14 +105,14 @@ public class KinesisSplitManager
     {
         KinesisTableHandle kinesisTableHandle = (KinesisTableHandle) table;
 
-        InternalStreamDescription description = this.getStreamDescription(kinesisTableHandle.getStreamName());
+        InternalStreamDescription description = this.getStreamDescription(kinesisTableHandle.streamName());
 
         ImmutableList.Builder<ConnectorSplit> builder = ImmutableList.builder();
         for (Shard shard : description.getShards()) {
             KinesisSplit split = new KinesisSplit(
-                    kinesisTableHandle.getStreamName(),
-                    kinesisTableHandle.getMessageDataFormat(),
-                    kinesisTableHandle.getCompressionCodec(),
+                    kinesisTableHandle.streamName(),
+                    kinesisTableHandle.messageDataFormat(),
+                    kinesisTableHandle.compressionCodec(),
                     shard.getShardId(),
                     shard.getSequenceNumberRange().getStartingSequenceNumber(),
                     shard.getSequenceNumberRange().getEndingSequenceNumber());
@@ -151,7 +151,7 @@ public class KinesisSplitManager
                 internalStreamDescription.addAllShards(describeStreamResult.getStreamDescription().getShards());
 
                 if (describeStreamResult.getStreamDescription().getHasMoreShards() && (shards.size() > 0)) {
-                    exclusiveStartShardId = shards.get(shards.size() - 1).getShardId();
+                    exclusiveStartShardId = shards.getLast().getShardId();
                 }
                 else {
                     exclusiveStartShardId = null;
